--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,6 @@ kotlinCompilerExtensionVersion = "1.5.1"
 kotlinSerialization = "1.9.0"
 lifecycle-viewmodel = "1.0.0-alpha03"
 paging= "3.2.1"
-paging-compose = "3.3.0-beta01"
 
 
 ktor = "2.3.5"
@@ -56,7 +55,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeKtx" }
 
 paging-runtime ={group = "androidx.paging", name ="paging-runtime", version.ref = "paging"}
-paging-compose = {group ="androidx.paging", name="paging-compose", version.ref ="paging-compose"}
+paging-compose = {group ="androidx.paging", name="paging-compose", version.ref ="paging"}
 
 
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
